--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "moment": "^2.29.1",
+    "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +23,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
